cmss/e-forms/objects/Product_Parameter__c/Product_Parameter__c.object-meta.xml
<CustomObject>
    <label>Product Parameter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>