cmss/e-forms/objects/Product_Parameter__c/fields/Cleave_Data__c.field-meta.xml
<CustomField>
    <fullName>Cleave_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cleave Data</label>
    <type>TextArea</type>
</CustomField>