cmss/e-forms/objects/Product_Parameter__c/fields/Cleave_Type__c.field-meta.xml
<CustomField>
    <fullName>Cleave_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cleave Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>