cmss/e-forms/objects/Product_Parameter__c/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>