cmss/e-forms/objects/Product_Parameter__c/fields/Filled_by_User__c.field-meta.xml
<CustomField>
    <fullName>Filled_by_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled by User</label>
    <type>Checkbox</type>
</CustomField>