cmss/e-forms/objects/Product_Parameter__c/fields/Initial_State__c.field-meta.xml
<CustomField>
    <fullName>Initial_State__c</fullName>
    <label>Initial_State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
                <default>true</default>
                <label>Visible</label>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>