cmss/e-forms/objects/Product_Parameter__c/fields/Is_For_Final_Validation__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Final_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is For Final Validation</label>
    <type>Checkbox</type>
</CustomField>