cmss/e-forms/objects/Product_Parameter__c/fields/Label_Duration__c.field-meta.xml
<CustomField>
    <fullName>Label_Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>