cmss/e-forms/objects/Product_Parameter__c/fields/Load_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Load_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>loads hidden L1 in RO mode
(hack for loading sections with PP with TPP showing PP in different sections)</description>
    <label>Load Hidden</label>
    <type>Checkbox</type>
</CustomField>