cmss/e-forms/objects/Product_Parameter__c/fields/Load_Hidden_RO__c.field-meta.xml
<CustomField>
    <fullName>Load_Hidden_RO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Hidden RO</label>
    <type>Checkbox</type>
</CustomField>