cmss/e-forms/objects/Product_Parameter__c/fields/Lx__c.field-meta.xml
<CustomField>
    <fullName>Lx__c</fullName>
    <formula>IF(ISBLANK(Product_Parameter__c), &apos;L1&apos;, IF(ISBLANK( Product_Parameter__r.Product_Parameter__c), &apos;L2&apos;, &apos;L3&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lx</label>
    <type>Text</type>
</CustomField>