cmss/e-forms/objects/Product_Parameter__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>