cmss/e-forms/objects/Product_Parameter__c/fields/Premium_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Premium_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Newsletter</label>
    <type>Checkbox</type>
</CustomField>