cmss/e-forms/objects/Product_Parameter__c/fields/Priority_SUFO__c.field-meta.xml
<CustomField>
    <fullName>Priority_SUFO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Priority SUFO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>