cmss/e-forms/objects/Product_Parameter__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Parameters</relationshipLabel>
    <relationshipName>Product_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>