cmss/e-forms/objects/Product_Parameter__c/fields/Product_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Product_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Parameter</label>
    <referenceTo>Product_Parameter__c</referenceTo>
    <relationshipLabel>Product Parameters</relationshipLabel>
    <relationshipName>Product_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>