cmss/e-forms/objects/Product_Parameter__c/fields/SCUBE_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>SCUBE_Transaction_Type__c</fullName>
    <label>SCUBE Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUBFLOW</fullName>
            </value>
            <value>
                <fullName>SWITCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>