cmss/e-forms/objects/Product_Parameter__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>