cmss/e-forms/objects/Product_Parameter__c/fields/SOQL_Background_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Background_Query__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL Background Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>