cmss/e-forms/objects/Product_Parameter__c/fields/SOQL_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Field_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>