cmss/e-forms/objects/Product_Parameter__c/fields/SOQL_Filter_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Filter_Query__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL_Filter_Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>