cmss/e-forms/objects/Product_Parameter__c/fields/Specific_External_Link__c.field-meta.xml
<CustomField>
    <fullName>Specific_External_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specific External Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>