cmss/e-forms/objects/Product_Parameter__c/fields/String_Value__c.field-meta.xml
<CustomField>
    <fullName>String_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>