cmss/e-forms/objects/Product_Parameter__c/fields/Sync_Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Sync_Element_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync Element Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>