cmss/e-forms/objects/Product_Parameter__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCUBE</fullName>
            </value>
            <value>
                <fullName>CRIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>