cmss/e-forms/objects/Product_Parameter__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Threshold Value</label>
    <referenceTo>Threshold_Value__c</referenceTo>
    <relationshipLabel>Product Parameters</relationshipLabel>
    <relationshipName>Product_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>