cmss/e-forms/objects/Product_Parameter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Input parameters</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Conditionally shown</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Calculated Select</fullName>
            </value>
            <value>
                <fullName>Input With Background Query</fullName>
            </value>
            <value>
                <fullName>Select With Background Query</fullName>
            </value>
            <value>
                <fullName>Multiple Input With Background Query</fullName>
            </value>
            <value>
                <fullName>Input with SOQL</fullName>
            </value>
            <value>
                <fullName>Multi Select</fullName>
            </value>
            <value>
                <fullName>External Link</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Supplement</fullName>
            </value>
            <value>
                <fullName>Theme</fullName>
            </value>
            <value>
                <fullName>Regular Investment</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Textarea Input Parameter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>