cmss/e-forms/objects/Product_Parameter__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>