cmss/e-forms/objects/Product_Parameter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>