cmss/e-forms/objects/Product_Parameter__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Branch Employee</fullName>
            </value>
            <value>
                <fullName>BO User</fullName>
            </value>
            <value>
                <fullName>KC User</fullName>
            </value>
            <value>
                <fullName>Bus Admin</fullName>
            </value>
            <value>
                <fullName>Data Admin</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Správce systému</fullName>
            </value>
            <value>
                <fullName>PBA User</fullName>
            </value>
            <value>
                <fullName>Back office</fullName>
                <isActive>false</isActive>
                <label>Back office</label>
            </value>
            <value>
                <fullName>Branch</fullName>
                <isActive>false</isActive>
                <label>Branch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>