cmss/e-forms/objects/Product_Parameter__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sync_Element_Name__c</field>
        <operation>contains</operation>
        <value>chargeFee</value>
    </filters>
    <label>test</label>
    <language>en_US</language>
</ListView>